--- a/services/_includes/adoc/web_configvars.adoc
+++ b/services/_includes/adoc/web_configvars.adoc
@@ -4,7 +4,7 @@
 
 ifeval::[{show-deprecation} == true]
 
-[#deprecation-note-2023-12-01-11-03-06]
+[#deprecation-note-2023-12-01-12-32-54]
 [caption=]
 .Deprecation notes for the web service
 [width="100%",cols="~,~,~,~",options="header"]
@@ -511,6 +511,15 @@ a| [subs=-attributes]
 ++[] ++
 a| [subs=-attributes]
 A list to disable specific Web extensions identified by their ID. The ID can e.g. be taken from the 'index.ts' file of the web extension. Example: 'com.github.owncloud.web.files.search,com.github.owncloud.web.files.print'. See the Environment Variable Types description for more details.
+
+a|`WEB_OPTION_USER_LIST_REQUIRES_FILTER` +
+
+a| [subs=-attributes]
+++bool ++
+a| [subs=-attributes]
+++false ++
+a| [subs=-attributes]
+Defines whether one ore more filters must be set in order to list users in the Web admin settings. Set this option to 'true' if running in an environment with a lot of users and listing all users could slow down performance. Defaults to 'false'.
 
 a|`OCIS_JWT_SECRET` +
 `WEB_JWT_SECRET` +
